--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
     "require": {
         "php": ">=5.3"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.*"
+    },
     "autoload": {
         "psr-4": {
             "Rde\\": "src/"
